<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <com.gallery.editor.image.photoeditor.widgets.textview.TextViewMedium
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:contentDescription="@string/view"
        android:padding="@dimen/dp_20"
        android:src="@drawable/image_view_selector"
        app:layout_constraintEnd_toStartOf="@+id/image_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/image_edit"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:contentDescription="@string/editor"
        android:padding="@dimen/dp_20"
        android:src="@drawable/edit_selector"
        app:layout_constraintEnd_toStartOf="@+id/image_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/image_view" />

    <ImageView
        android:id="@+id/image_share"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:contentDescription="@string/share"
        android:padding="@dimen/dp_20"
        android:src="@drawable/share_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_edit"
        app:layout_constraintTop_toTopOf="@+id/image_edit" />
</android.support.constraint.ConstraintLayout>
