<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_350"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_30"
    android:paddingTop="@dimen/dp_30">

    <com.gallery.editor.image.photoeditor.widgets.textview.TextViewMedium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/text_title"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_24" />

    <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
        android:layout_width="wrap_content"
        android:id="@+id/content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_22"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/content_question"
        android:textColor="@color/color_white" />

    <com.gallery.editor.image.photoeditor.widgets.textview.TextViewMedium
        android:layout_width="wrap_content"
        android:id="@+id/text_back"
        android:layout_height="wrap_content"
        android:background="@drawable/text_selector"
        android:text="@string/back"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_20"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_22" />
</LinearLayout>
