<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_30"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30">

        <ImageView
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_90"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@mipmap/ic_launcher" />

        <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_rate"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewMedium
                android:id="@+id/text_not_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_selector"
                android:gravity="center"
                android:text="@string/not_now"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_20" />

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewMedium
                android:id="@+id/text_rate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/text_selector"
                android:gravity="center"
                android:text="@string/rate_app"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
