<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.activities.ImageEditorActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_marginBottom="@dimen/dp_16">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="bottom"
            android:padding="@dimen/dp_16"
            android:src="@drawable/back_selector" />

        <RelativeLayout
            android:id="@+id/rl_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_undo"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:padding="@dimen/dp_12"
                android:src="@drawable/undo_selector" />

            <ImageView
                android:id="@+id/image_redo"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_toRightOf="@+id/image_undo"
                android:padding="@dimen/dp_12"
                android:src="@drawable/redo_selector" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/image_check"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|bottom"
            android:padding="@dimen/dp_16"
            android:src="@drawable/check_selector" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">

        <com.gallery.editor.image.photoeditor.widgets.simplecropview.CropImageView
            android:id="@+id/image_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:scv_background_color="@android:color/transparent"
            app:scv_crop_mode="fit_image"
            app:scv_guide_show_mode="show_on_touch"
            app:scv_handle_show_mode="show_always"
            app:scv_handle_size="@dimen/dp_15"
            app:scv_min_frame_size="@dimen/dp_50"
            app:scv_touch_padding="@dimen/dp_8" />

        <android.opengl.GLSurfaceView
            android:id="@+id/image_gl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/frame_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.gallery.editor.image.photoeditor.widgets.textview.TimeStampText
                android:id="@+id/text_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:textColor="@color/color2"
                android:textSize="@dimen/sp_30" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_draw_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.gallery.editor.image.photoeditor.widgets.imageview.BrushView
                android:id="@+id/brush_draw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/frame_draw_gliter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/layout_seekbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_gravity="bottom"
            android:background="#89111111"
            android:visibility="gone">

            <ImageView
                android:id="@+id/size"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_18"
                android:src="@drawable/ic_size_" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/size"
                android:max="100"
                android:progress="50" />
        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        android:layout_marginTop="@dimen/dp_10">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_35">

            <ImageView
                android:id="@+id/image_adjust"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:padding="@dimen/dp_10"
                android:src="@drawable/adjust_selector"
                app:layout_constraintEnd_toStartOf="@+id/image_effect"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_effect"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:padding="@dimen/dp_10"
                android:src="@drawable/effect_selector"
                app:layout_constraintEnd_toStartOf="@+id/image_brush"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_adjust" />

            <ImageView
                android:id="@+id/image_brush"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:padding="@dimen/dp_10"
                android:src="@drawable/brush_other_selector"
                app:layout_constraintEnd_toStartOf="@+id/image_timestamp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_effect" />

            <ImageView
                android:id="@+id/image_timestamp"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:padding="@dimen/dp_10"
                android:src="@drawable/timestamp_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_brush" />

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
                android:id="@+id/text_adjust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/adjust"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="@+id/image_adjust"
                app:layout_constraintStart_toStartOf="@+id/image_adjust"
                app:layout_constraintTop_toBottomOf="@+id/image_adjust" />

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
                android:id="@+id/text_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effectChildren"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="@+id/image_effect"
                app:layout_constraintStart_toStartOf="@+id/image_effect"
                app:layout_constraintTop_toTopOf="@+id/text_adjust" />

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
                android:id="@+id/text_brush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/brush"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="@+id/image_brush"
                app:layout_constraintStart_toStartOf="@+id/image_brush"
                app:layout_constraintTop_toTopOf="@+id/text_effect" />

            <com.gallery.editor.image.photoeditor.widgets.textview.TextViewLight
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="@+id/image_timestamp"
                app:layout_constraintStart_toStartOf="@+id/image_timestamp"
                app:layout_constraintTop_toTopOf="@+id/text_brush" />
        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>
    </RelativeLayout>
</LinearLayout>